refactor(storage): switch receipt_image from MySQL Base64 to S3-compatible cloud storage